Création  de la classe "GestionCLient".

--- a/WindowsFormsProjetL3MIAGE/WindowsFormsProjetL3MIAGE/WindowsFormsProjetL3MIAGE.csproj
+++ b/WindowsFormsProjetL3MIAGE/WindowsFormsProjetL3MIAGE/WindowsFormsProjetL3MIAGE.csproj
@@ -80,6 +80,7 @@
     </Compile>
     <Compile Include="CLasse\Client.cs" />
     <Compile Include="CLasse\ConnexionBD.cs" />
+    <Compile Include="CLasse\GestionClient.cs" />
     <Compile Include="Client.cs">
       <SubType>Form</SubType>
     </Compile>
